--- a/Views/Profile/Index.cshtml
+++ b/Views/Profile/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-	<form action="/login" method="post" enctype="multipart/form-data">
+	<form action="/profile" method="post" enctype="multipart/form-data">
 		<p>
 			<label>Имя профиля</label>
 			<input name="ProfileName" type="text" value="@Model.ProfileName" />
