--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -15,6 +15,9 @@
 			<label>Пароль</label>
 			<input name="Password" type="password" />
 		</p>
+		<p>
+			<input type="checkbox" name="RememberMe" value="true" /> Запомни меня
+		</p>
 		<button>Авторизоваться</button>
 	</form>
 </div>
