--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Privacy">Privacy</a>
                         </li>
-                        @await Component.InvokeAsync("MainMenu");
+                        @await Component.InvokeAsync("MainMenu")
                     </ul>
                 </div>
             </div>
