Resume on profile page

--- a/Resunet/Views/Home/Index.cshtml
+++ b/Resunet/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<Resunet.DAL.Models.ProfileModel>
+
+@{
+	ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">Welcome</h1>
+	<div class="row">
+		@foreach (var resume in Model)
+		{
+			<div class="col-sm-4 col-md-3">
+				<a href="/resume/@resume.ProfileId"/><img onscroll="@resume.ProfileImage" class="profileimage" />
+				<h3>@resume.FirstName @resume.LastName</h3>
+				<div>@resume.ProfileName</div>
+			</div>
+		}
+	</div>
 </div>
