--- a/Resunet/wwwroot/css/site.css
+++ b/Resunet/wwwroot/css/site.css
@@ -1,26 +1,60 @@
 ﻿html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .error, .validation-summary-errors {
     color: red
+}
+
+.button:hover {
+    color: white;
+    text-decoration: none;
+    background: #2980b9;
+}
+
+.button {
+    display: inline-block;
+    border-radius: 0px;
+    padding: 4px 23px;
+    color: #fff;
+    cursor: pointer;
+    height: 36px;
+    line-height: 30px;
+    text-align: center;
+    background-color: #d35400;
+    font-style: normal;
+    text-transform: uppercase;
+    border: 0;
+    outline: none;
+}
+
+.form label {
+    display: block;
+}
+
+.form input {
+    width: 100%;
+}
+
+.profileimage {
+    width: 100%;
 }
