--- a/Resunet/Views/Profile/Index.cshtml
+++ b/Resunet/Views/Profile/Index.cshtml
@@ -1,45 +1,56 @@
 ﻿@model ProfileViewModel
 
 @{
-	ViewData["Title"] = "Профиль";
+    ViewData["Title"] = "Профиль";
 }
 
+<h1>Мой профиль:</h1>
 <div class="row">
-	<div class="col-sm-8">
-		<form action="/profile" method="post" class="form">
-			<input type="hidden" name="ProfileId" value="@Model.ProfileId" />
-			@Html.AntiForgeryToken()
-			<p>
-				<label>Имя профиля</label>
-				<input name="ProfileName" type="text" value="@Model.ProfileName" />
-				<div class="error">@Html.ValidationMessageFor(m => m.ProfileName)</div>
-			</p>
-			<p>
-				<label>Имя</label>
-				<input name="FirstName" type="text" value="@Model.FirstName" />
-				<div class="error">@Html.ValidationMessageFor(m => m.FirstName)</div>
-			</p>
-			<p>
-				<label>Фамилия</label>
-				<input name="LastName" type="text" value="@Model.LastName" />
-				<div class="error">@Html.ValidationMessageFor(m => m.LastName)</div>
-			</p>
-			<button class="button">Сохранить</button>
-		</form>
-	</div>
+    <div class="col-sm-8">
+        <form action="/profile" method="post" class="form">
+            <input type="hidden" name="ProfileId" value="@Model.ProfileId" />
+            @Html.AntiForgeryToken()
+            <p>
+                <label>Имя профиля</label>
+                <input name="ProfileName" type="text" value="@Model.ProfileName" />
+                <div class="error">@Html.ValidationMessageFor(m => m.ProfileName)</div>
+            </p>
+            <p>
+                <label>Имя</label>
+                <input name="FirstName" type="text" value="@Model.FirstName" />
+                <div class="error">@Html.ValidationMessageFor(m => m.FirstName)</div>
+            </p>
+            <p>
+                <label>Фамилия</label>
+                <input name="LastName" type="text" value="@Model.LastName" />
+                <div class="error">@Html.ValidationMessageFor(m => m.LastName)</div>
+            </p>
+            <button class="button">Сохранить</button>
+        </form>
+    </div>
 
-	<div class="col-sm-4">
-		<form action="/profile/uploadimage" method="post" enctype="multipart/form-data">
-			<input type="hidden" name="ProfileId" value="@Model.ProfileId" />
-			@Html.AntiForgeryToken()
-			@if (!String.IsNullOrEmpty(Model.ProfileImage))
-			{
-				<img src="@Model.ProfileImage" class="profileimage" />
-			}
-			<p>
-				<input type="file" name="file" />
-			</p>
-			<button class="button">Сохранить</button>
-		</form>
-	</div>
+    <div class="col-sm-4">
+        <form action="/profile/uploadimage" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="ProfileId" value="@Model.ProfileId" />
+            @Html.AntiForgeryToken()
+            @if (!String.IsNullOrEmpty(Model.ProfileImage))
+            {
+                <img src="@Model.ProfileImage" class="profileimage" />
+            }
+            <p>
+                <input type="file" name="file" />
+            </p>
+            <button class="button">Сохранить</button>
+        </form>
+    </div>
 </div>
+
+<hr />
+
+<h1>Я знаю:</h1>
+<div class="row">
+    <div class="col-sm-12">
+        <component type="typeof(ResunetUI.Pages.ProfileSkillEditor)" render-mode="WebAssembly" />
+    </div>
+</div>
+<script src="_framework/blazor.webassembly.js"></script>
