--- a/Resunet/Views/Resume/Index.cshtml
+++ b/Resunet/Views/Resume/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ResumeModel
+﻿@model ResunetDal.Models.ResumeModel
 
 @{
 	ViewData["Title"] = Model.Profile.ProfileName + "-" + Model.Profile.FirstName + " " + Model.Profile.LastName;
