--- a/Resunet/Views/Profile/Index.cshtml
+++ b/Resunet/Views/Profile/Index.cshtml
@@ -4,27 +4,46 @@
     ViewData["Title"] = "Профиль";
 }
 
-<h1>Мой профиль:</h1>
+<h1>@Resunet.Service.Localization.Languages["ru"].GetLabel("MyProfile"):</h1>
 <div class="row">
     <div class="col-sm-8">
         <form action="/profile" method="post" class="form">
             <input type="hidden" name="ProfileId" value="@Model.ProfileId" />
             @Html.AntiForgeryToken()
-            <p>
+
+            <div class="form-group">
+                <select name="ProfileStatus" class="text">
+                    @foreach (int psv in Enum.GetValues(typeof(ResunetDal.Models.ProfileStatusEnum)))
+                    {
+                        if((int)Model.ProfileStatus == psv)
+                        {
+                            <option value="@psv" selected="selected"> @Resunet.Service.Localization.Languages["ru"].GetLabel("ProfileStatusEnum" + @Enum.GetName(typeof(ResunetDal.Models.ProfileStatusEnum), psv))</option>
+                        }
+                        else
+                        {
+                            <option value="@psv"> @Resunet.Service.Localization.Languages["ru"].GetLabel("ProfileStatusEnum" + @Enum.GetName(typeof(ResunetDal.Models.ProfileStatusEnum), psv))</option>
+                        }
+                    }
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label>Имя профиля</label>
                 <input name="ProfileName" type="text" value="@Model.ProfileName" />
                 <div class="error">@Html.ValidationMessageFor(m => m.ProfileName)</div>
-            </p>
-            <p>
+            </div>
+
+            <div class="form-group">
                 <label>Имя</label>
                 <input name="FirstName" type="text" value="@Model.FirstName" />
                 <div class="error">@Html.ValidationMessageFor(m => m.FirstName)</div>
-            </p>
-            <p>
+            </div>
+
+            <div class="form-group">
                 <label>Фамилия</label>
                 <input name="LastName" type="text" value="@Model.LastName" />
                 <div class="error">@Html.ValidationMessageFor(m => m.LastName)</div>
-            </p>
+            </div>
             <button class="button">Сохранить</button>
         </form>
     </div>
