--- a/Resunet/Views/_ViewImports.cshtml
+++ b/Resunet/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using ResunetBl
-@using ResunetBl.Models
+@using Resunet.Models
 @using ResunetBl.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
