#R-1 [feature] Refactoring + article editor

--- a/Resunet/Views/Home/Index.cshtml
+++ b/Resunet/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ResunetDal.Models.ProfileModel>
+﻿@model IEnumerable<ResunetDAL.Models.ProfileModel>
 
 @{
 	ViewData["Title"] = "Home Page";
