--- a/Resunet/Views/ProfilePosts/Edit.cshtml
+++ b/Resunet/Views/ProfilePosts/Edit.cshtml
@@ -1,19 +1,18 @@
 ﻿@using Resunet.ViewModels
 @model PostViewModel
 
-@{
-    ViewData["Title"] = "Профиль";
-}
-
 <div class="row">
-    @if(Model.PostId == null)
-    {
-        ViewData["Title"] = "Íîâàÿ ñòàòüÿ";
-        <h1>Íîâàÿ ñòàòüÿ</h1>
-    }    
-    else
-    {
-        ViewData["Title"] = "ðåäàêòèðîâàíèå";
-        <h1>ðåäàêòèðîâàíèå</h1>
-    }
+     @if (Model.PostId is null)
+        {
+            ViewData["Title"] = "Новая статья";
+            <h1>Новая статья</h1>
+        }
+        else
+        {
+            ViewData["Title"] = "Редактирование";
+            <h1>Редактирование</h1>
+        }
+        <component type="typeof(ResunetUI.Pages.StoryEditor)" render-mode="WebAssembly" param-postid="@Model.PostId" />
 </div>
+
+<script src="~/_framework/blazor.webassembly.js"></script>
