--- a/ResunetUI/_Imports.razor
+++ b/ResunetUI/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using ResunetUI
-@using ResunetUI.Layout
+@using ResunetUI.Shared
+
