#R-2 [feature] Uploading images to articles

--- a/Resunet/Views/Profile/Posts.cshtml
+++ b/Resunet/Views/Profile/Posts.cshtml
@@ -6,9 +6,8 @@
 }
 
 <h1>Мои статьи:</h1>
-<div class="row">
-</div>
+<div class="row"></div>
 <hr />
 <p class="text-end">
-    <a class="button" href="/profile/post/0">Добавить</a>
+    <a class="button" href="/profile/posts/0">Добавить</a>
 </p>    
