--- a/Resunet/Views/_ViewImports.cshtml
+++ b/Resunet/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Resunet.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, ResunetUI
+@* @addTagHelper *, ResunetUI *@
